# kamera

./: Cargo.toml
examples/: window-rgb.rs
src/: camera.rs
src/linux_v4l2/: mod.rs
src/mac_avf/: av_capture_device.rs  av_capture_device_format.rs  av_capture_device_input.rs  av_capture_session.rs  av_capture_video_data_output.rs  camera.rs  mod.rs  sample_buffer.rs  sample_buffer_delegate.rs  video_output_settings.rs
src/win_mf/: camera.rs  mf.rs
tests/: camera.rs
