[package]
name = "kamera"
version = "0.0.2"
edition = "2021"
authors = ["Gilbert Röhrbein"]
keywords = ["camera", "webcam", "capture", "cross-platform"]
license = "MIT/Apache-2.0"
description = "Camera API with a reduced feature set for basic use cases and learning"
documentation = "https://docs.rs/kamera"
repository = "https://github.com/payload/kamera"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.0"
objc2 = "0.6.3"
objc2-av-foundation = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.43", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_DirectShow",
    "Win32_Media",
    "Win32",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "implement",
] }

[target.'cfg(target_os="linux")'.dependencies]
v4l = "0.14.0"
image = { version = "0.25.1", features = ["jpeg"], default-features = false }

[dev-dependencies]
softbuffer = "0.3.0"
winit = "0.27.5"

[dependencies]
ffimage = "0.9.0"
ffimage_yuv = "0.9.0"
image = { version = "0.25.1", default-features = false, features = ["jpeg"] }
